--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en" >
+<html lang="en" class="h-100" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>test</title>
+    <title>Career Roadmap Draft</title>
 
     <!-- MapBox -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js'></script>
@@ -22,7 +22,10 @@
 
     <style>
 
-
+    
+    body { margin:0; padding:0; }
+    
+   
 
 	@font-face {
  	  font-family: 'KapraNeue-SemiBoldExpanded';
