--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                   data: newLocations
                                 },
                                 layout: {
-                                  'icon-image': 'restaurant-15',
+                                  'marker-size' : 'large',
                                   'icon-allow-overlap': true,
                                 }
                               });
