--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                             
                             function addMarkers(response) {
                                 var newLocations = response.data;
+                                map.loadImage("https://i.imgur.com/MK4NUzI.png", function(error, image) {
+                                if (error) throw error;
+                                map.addImage("custom-marker", image);
                                 
                                 map.addLayer({
                                 id: 'locations',
@@ -150,8 +153,7 @@
                                   data: newLocations
                                 },
                                 layout: {
-                                  'marker-size' : 'large',
-                                  'icon-allow-overlap': true,
+                                    "icon-image": "custom-marker",
                                 }
                               });
                             }
