--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                                 // add markers to map
                                 geoJson.features.forEach(function(marker) {
                                     // create a DOM element for the marker
-                                    var el = document.createElement('div');
-                                    el.className = 'marker';
+                                    //var el = document.createElement('div');
+                                    //el.className = 'marker';
                                     
                                     // add marker to map
                                     new mapboxgl.Marker(el)
