--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 .catch(function (error) {
                                 }); 
                                 
-                                addMarkers(response){
+                                function addMarkers(response){
                                 var stores = response.data;
                                 
                                 map.addSource('places', {
