--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                   // By default the image for your custom marker will be anchored
                                   // by its center. Adjust the position accordingly
                                   // Create the custom markers, set their position, and add to map
-                                  new mapboxgl.Marker(el})
+                                  new mapboxgl.Marker(el)
                                     .setLngLat(marker.geometry.coordinates)
                                     .addTo(map);
                                 });
